--- a/card-details.html
+++ b/card-details.html
@@ -456,6 +456,38 @@
 
     <script>
         // Get card ID from URL parameter
+        // Currency conversion (USD to INR)
+        let USD_TO_INR = 88.72; // Default fallback rate
+
+        async function fetchExchangeRate() {
+            try {
+                const response = await fetch('/api/exchange-rate');
+                if (response.ok) {
+                    const data = await response.json();
+                    USD_TO_INR = data.rate;
+                    console.log(`💱 Exchange rate loaded: 1 USD = ₹${USD_TO_INR.toFixed(4)} INR`);
+                }
+            } catch (err) {
+                console.error('Error fetching exchange rate:', err);
+            }
+        }
+
+        function convertToINR(usdPrice) {
+            if (!usdPrice || usdPrice === 'N/A' || isNaN(usdPrice)) {
+                return 'N/A';
+            }
+            return parseFloat(usdPrice) * USD_TO_INR;
+        }
+
+        function formatINR(price) {
+            if (!price || price === 'N/A' || isNaN(price)) {
+                return 'N/A';
+            }
+            const priceNum = parseFloat(price);
+            const decimals = priceNum < 100 ? 2 : 0;
+            return '₹' + priceNum.toLocaleString('en-IN', { maximumFractionDigits: decimals, minimumFractionDigits: decimals });
+        }
+
         const urlParams = new URLSearchParams(window.location.search);
         const cardId = urlParams.get('id');
         const language = urlParams.get('lang') || 'en';
@@ -470,6 +502,9 @@
 
         async function loadCardDetails(cardId, language) {
             try {
+                // Fetch exchange rate first
+                await fetchExchangeRate();
+
                 // Fetch card details from TCGdex API
                 const response = await fetch(`https://api.tcgdex.net/v2/${language}/cards/${cardId}`);
 
@@ -664,9 +699,11 @@
                     pricing.ebay.listings.slice(0, 5).forEach(item => {
                         const listingEl = document.createElement('div');
                         listingEl.className = 'ebay-item';
+                        const usdPrice = item.sale_price || 0;
+                        const inrPrice = convertToINR(usdPrice);
                         listingEl.innerHTML = `
                             <a href="${item.link}" target="_blank" title="${item.title}">${item.title}</a>
-                            <span class="ebay-price">$${(item.sale_price || 0).toFixed(2)}</span>
+                            <span class="ebay-price">${formatINR(inrPrice)} <span style="font-size: 0.8em; color: #888;">($${usdPrice.toFixed(2)})</span></span>
                         `;
                         ebayListings.appendChild(listingEl);
                     });
@@ -716,13 +753,20 @@
             const div = document.createElement('div');
             div.className = 'price-card';
 
-            const priceDisplay = (price && price !== 'N/A') ?
-                `$${typeof price === 'number' ? price.toFixed(2) : price}` :
-                'N/A';
+            let priceDisplay = 'N/A';
+            let usdPriceText = '';
+
+            if (price && price !== 'N/A') {
+                const usdPrice = typeof price === 'number' ? price : parseFloat(price);
+                const inrPrice = convertToINR(usdPrice);
+                priceDisplay = formatINR(inrPrice);
+                usdPriceText = `<div style="font-size: 0.75em; color: #b0b0b0; margin-top: 5px;">($${usdPrice.toFixed(2)} USD)</div>`;
+            }
 
             div.innerHTML = `
                 <span class="price-source">${source}</span>
                 <div class="variant-price ${price === 'N/A' ? 'price-unavailable' : ''}">${priceDisplay}</div>
+                ${usdPriceText}
             `;
             return div;
         }
@@ -733,13 +777,18 @@
 
             const displayName = variantName.charAt(0).toUpperCase() + variantName.slice(1);
 
+            const formatPrice = (usd) => {
+                const inr = convertToINR(usd);
+                return `${formatINR(inr)}<span style="font-size: 0.7em; color: #888; display: block;">($${usd.toFixed(2)})</span>`;
+            };
+
             div.innerHTML = `
                 <span class="price-source">TCGPlayer ${displayName}</span>
                 <div class="price-variants">
-                    ${variantData.marketPrice ? `<div class="price-variant"><span class="variant-label">Market</span><span class="variant-price">$${variantData.marketPrice.toFixed(2)}</span></div>` : ''}
-                    ${variantData.lowPrice ? `<div class="price-variant"><span class="variant-label">Low</span><span class="variant-price">$${variantData.lowPrice.toFixed(2)}</span></div>` : ''}
-                    ${variantData.midPrice ? `<div class="price-variant"><span class="variant-label">Mid</span><span class="variant-price">$${variantData.midPrice.toFixed(2)}</span></div>` : ''}
-                    ${variantData.highPrice ? `<div class="price-variant"><span class="variant-label">High</span><span class="variant-price">$${variantData.highPrice.toFixed(2)}</span></div>` : ''}
+                    ${variantData.marketPrice ? `<div class="price-variant"><span class="variant-label">Market</span><span class="variant-price">${formatPrice(variantData.marketPrice)}</span></div>` : ''}
+                    ${variantData.lowPrice ? `<div class="price-variant"><span class="variant-label">Low</span><span class="variant-price">${formatPrice(variantData.lowPrice)}</span></div>` : ''}
+                    ${variantData.midPrice ? `<div class="price-variant"><span class="variant-label">Mid</span><span class="variant-price">${formatPrice(variantData.midPrice)}</span></div>` : ''}
+                    ${variantData.highPrice ? `<div class="price-variant"><span class="variant-label">High</span><span class="variant-price">${formatPrice(variantData.highPrice)}</span></div>` : ''}
                 </div>
             `;
             return div;
